--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_change_password"
+        android:id="@+id/toolbar"
         style="@style/Theme.WarrantyRoster.Toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
@@ -26,14 +26,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_change_password">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/lav_change_password"
+                android:id="@+id/lav_keyboard"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:layout_marginHorizontal="8dp"
@@ -46,14 +46,14 @@
                 app:lottie_rawRes="@raw/anim_keyboard" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_change_password_title_current"
+                android:id="@+id/tv_title_current_password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="start|center_vertical"
-                android:labelFor="@+id/ti_change_password_layout_current"
+                android:labelFor="@+id/ti_layout_current_password"
                 android:maxLines="1"
                 android:text="@string/change_password_title_current"
                 android:textAlignment="gravity"
@@ -61,10 +61,10 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lav_change_password" />
+                app:layout_constraintTop_toBottomOf="@+id/lav_keyboard" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/ti_change_password_layout_current"
+                android:id="@+id/ti_layout_current_password"
                 style="@style/Theme.WarrantyRoster.TextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -72,11 +72,11 @@
                 android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_change_password_title_current"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title_current_password"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ti_change_password_edit_current"
+                    android:id="@+id/ti_edit_current_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_regular"
@@ -93,14 +93,14 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_change_password_title_new"
+                android:id="@+id/tv_title_new_password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="start|center_vertical"
-                android:labelFor="@+id/ti_change_password_layout_new"
+                android:labelFor="@+id/ti_layout_new_password"
                 android:maxLines="1"
                 android:text="@string/change_password_title_new"
                 android:textAlignment="gravity"
@@ -108,10 +108,10 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ti_change_password_layout_current" />
+                app:layout_constraintTop_toBottomOf="@+id/ti_layout_current_password" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/ti_change_password_layout_new"
+                android:id="@+id/ti_layout_new_password"
                 style="@style/Theme.WarrantyRoster.TextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -119,11 +119,11 @@
                 android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_change_password_title_new"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title_new_password"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ti_change_password_edit_new"
+                    android:id="@+id/ti_edit_new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_regular"
@@ -140,14 +140,14 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_change_password_title_retype"
+                android:id="@+id/tv_title_retype_password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="start|center_vertical"
-                android:labelFor="@+id/ti_change_password_layout_retype"
+                android:labelFor="@+id/ti_layout_retype_password"
                 android:maxLines="1"
                 android:text="@string/change_password_title_retype"
                 android:textAlignment="gravity"
@@ -155,10 +155,10 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ti_change_password_layout_new" />
+                app:layout_constraintTop_toBottomOf="@+id/ti_layout_new_password" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/ti_change_password_layout_retype"
+                android:id="@+id/ti_layout_retype_password"
                 style="@style/Theme.WarrantyRoster.TextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -166,11 +166,11 @@
                 android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_change_password_title_retype"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title_retype_password"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ti_change_password_edit_retype"
+                    android:id="@+id/ti_edit_retype_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_regular"
@@ -198,7 +198,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ti_change_password_layout_retype" />
+                app:layout_constraintTop_toBottomOf="@+id/ti_layout_retype_password" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/cpi_change_password"
