--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".mainactivity.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fcv_main"
+        android:id="@+id/fcv"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,7 +16,7 @@
         app:navGraph="@navigation/nav_graph_main" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/appbar_main"
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -28,7 +28,7 @@
         app:fabCradleRoundedCornerRadius="20dp">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bnv_main"
+            android:id="@+id/bnv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:itemIconTint="@color/color_bottom_nav"
@@ -41,11 +41,11 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_main"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/main_text_content_description"
         android:src="@drawable/ic_fab_add"
-        app:layout_anchor="@id/appbar_main" />
+        app:layout_anchor="@id/appbar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
