--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_forgot_pw_sent_description"
+            android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
@@ -31,21 +31,21 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/lav_forgot_pw_sent"
+            android:id="@+id/lav_sent"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_marginHorizontal="4dp"
             android:layout_marginTop="44dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_description"
+            app:layout_constraintTop_toBottomOf="@+id/tv_description"
             app:lottie_autoPlay="true"
             app:lottie_loop="false"
             app:lottie_rawRes="@raw/anim_email_sent"
             app:lottie_speed="0.65" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_forgot_pw_sent_resend"
+            android:id="@+id/tv_resend"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
@@ -57,10 +57,10 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lav_forgot_pw_sent" />
+            app:layout_constraintTop_toBottomOf="@+id/lav_sent" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_forgot_pw_sent_resend"
+            android:id="@+id/btn_resend"
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,10 +72,10 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_resend" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_resend" />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/cpi_forgot_pw_sent"
+            android:id="@+id/cpi_resend"
             style="@style/Theme.WarrantyRoster.LoadingProgressBar.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,10 +84,10 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_resend" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_resend" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_forgot_pw_sent_resent"
+            android:id="@+id/tv_resent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
@@ -99,10 +99,10 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lav_forgot_pw_sent" />
+            app:layout_constraintTop_toBottomOf="@+id/lav_sent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_forgot_pw_sent_timer"
+            android:id="@+id/tv_timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
@@ -115,11 +115,11 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_resent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_resent"
             tools:ignore="HardcodedText" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_forgot_pw_sent_return"
+            android:id="@+id/btn_return"
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -132,22 +132,22 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pw_sent_resend"
+            app:layout_constraintTop_toBottomOf="@+id/btn_resend"
             app:layout_goneMarginTop="79dp" />
 
         <androidx.constraintlayout.widget.Group
-            android:id="@+id/group_forgot_pw_sent_resend"
+            android:id="@+id/group_resend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="visible"
-            app:constraint_referenced_ids="tv_forgot_pw_sent_resend,btn_forgot_pw_sent_resend" />
+            app:constraint_referenced_ids="tv_resend,btn_resend" />
 
         <androidx.constraintlayout.widget.Group
-            android:id="@+id/group_forgot_pw_sent_timer"
+            android:id="@+id/group_timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:constraint_referenced_ids="tv_forgot_pw_sent_resent,tv_forgot_pw_sent_timer" />
+            app:constraint_referenced_ids="tv_resent,tv_timer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
