--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_login_description"
+            android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
@@ -30,14 +30,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_login_title_email"
+            android:id="@+id/tv_title_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="76dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="start|center_vertical"
-            android:labelFor="@+id/ti_login_layout_email"
+            android:labelFor="@+id/ti_layout_email"
             android:maxLines="1"
             android:text="@string/login_title_email"
             android:textAlignment="gravity"
@@ -45,10 +45,10 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_description" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/ti_login_layout_email"
+            android:id="@+id/ti_layout_email"
             style="@style/Theme.WarrantyRoster.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -56,10 +56,10 @@
             android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_title_email">
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ti_login_edit_email"
+                android:id="@+id/ti_edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_regular"
@@ -76,14 +76,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_login_title_password"
+            android:id="@+id/tv_title_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="start|center_vertical"
-            android:labelFor="@+id/ti_login_layout_password"
+            android:labelFor="@+id/ti_layout_password"
             android:maxLines="1"
             android:text="@string/login_title_password"
             android:textAlignment="gravity"
@@ -91,10 +91,10 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ti_login_layout_email" />
+            app:layout_constraintTop_toBottomOf="@+id/ti_layout_email" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/ti_login_layout_password"
+            android:id="@+id/ti_layout_password"
             style="@style/Theme.WarrantyRoster.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -102,11 +102,11 @@
             android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_title_password"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_password"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ti_login_edit_password"
+                android:id="@+id/ti_edit_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_regular"
@@ -123,7 +123,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_login_forgot_pw"
+            android:id="@+id/btn_forgot_pw"
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -136,10 +136,10 @@
             android:textColor="@color/red"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ti_login_layout_password" />
+            app:layout_constraintTop_toBottomOf="@+id/ti_layout_password" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_login_login"
+            android:id="@+id/btn_login"
             style="@style/Theme.WarrantyRoster.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -148,7 +148,7 @@
             android:text="@string/login_btn_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login_forgot_pw" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pw" />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/cpi_login"
@@ -156,13 +156,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_login_login"
-            app:layout_constraintEnd_toEndOf="@+id/btn_login_login"
-            app:layout_constraintStart_toStartOf="@+id/btn_login_login"
-            app:layout_constraintTop_toTopOf="@+id/btn_login_login" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
+            app:layout_constraintEnd_toEndOf="@+id/btn_login"
+            app:layout_constraintStart_toStartOf="@+id/btn_login"
+            app:layout_constraintTop_toTopOf="@+id/btn_login" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_login_register_title"
+            android:id="@+id/tv_register_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_regular"
@@ -172,13 +172,13 @@
             android:textAlignment="gravity"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/btn_login_register"
-            app:layout_constraintEnd_toStartOf="@+id/btn_login_register"
+            app:layout_constraintBaseline_toBaselineOf="@+id/btn_register"
+            app:layout_constraintEnd_toStartOf="@+id/btn_register"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_login_register"
+            android:id="@+id/btn_register"
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -191,8 +191,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@+id/tv_login_register_title"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />
+            app:layout_constraintStart_toEndOf="@+id/tv_register_title"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
